bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but 'true' found.
  if (estSurMessage():Boolean==true){
                               ^BDR:24: error: ')' expected but '}' found.
} 
^